force-app/main/default/objects/Doctor__c/fields/Checkbox_A__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox A</label>
    <type>Checkbox</type>
</CustomField>