force-app/main/default/objects/Doctor__c/fields/Checkbox_B__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_B__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox B</label>
    <type>Checkbox</type>
</CustomField>