force-app/main/default/objects/Doctor__c/fields/Checking__c.field-meta.xml
<CustomField>
    <fullName>Checking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checking</label>
    <type>Checkbox</type>
</CustomField>