force-app/main/default/objects/Doctor__c/fields/dAddress__c.field-meta.xml
<CustomField>
    <fullName>dAddress__c</fullName>
    <label>dAddress</label>
    <type>TextArea</type>
</CustomField>