force-app/main/default/objects/Doctor__c/fields/dEmail__c.field-meta.xml
<CustomField>
    <fullName>dEmail__c</fullName>
    <label>dEmail</label>
    <type>Email</type>
</CustomField>