force-app/main/default/objects/Doctor__c/fields/dGender__c.field-meta.xml
<CustomField>
    <fullName>dGender__c</fullName>
    <label>dGender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>