force-app/main/default/objects/Doctor__c/fields/dPhone__c.field-meta.xml
<CustomField>
    <fullName>dPhone__c</fullName>
    <label>dPhone</label>
    <type>Phone</type>
</CustomField>