force-app/main/default/objects/Doctor__c/fields/dQualification__c.field-meta.xml
<CustomField>
    <fullName>dQualification__c</fullName>
    <label>dQualification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MBBS</fullName>
            </value>
            <value>
                <fullName>FRCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>