force-app/main/default/objects/Doctor__c/fields/dSpecialization__c.field-meta.xml
<CustomField>
    <fullName>dSpecialization__c</fullName>
    <label>dSpecialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gynacologist</fullName>
            </value>
            <value>
                <fullName>General Surgeon</fullName>
            </value>
            <value>
                <fullName>Opthomologist</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Dermotologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>