force-app/main/default/objects/Doctor__c/fields/Total_Count_of_Patients__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_of_Patients__c</fullName>
    <label>Total Count of Patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>