force-app/main/default/objects/Doctor__c/recordTypes/Neurologist.recordType-meta.xml
<RecordType>
    <fullName>Neurologist</fullName>
    <active>true</active>
    <label>Neurologist</label>
</RecordType>