force-app/main/default/objects/Doctor__c/recordTypes/Pediatrician.recordType-meta.xml
<RecordType>
    <fullName>Pediatrician</fullName>
    <active>true</active>
    <label>Pediatrician</label>
</RecordType>