force-app/main/default/objects/Doctor__c/recordTypes/Psychiatrist.recordType-meta.xml
<RecordType>
    <fullName>Psychiatrist</fullName>
    <active>true</active>
    <label>Psychiatrist</label>
</RecordType>