force-app/main/default/objects/Doctor__c/validationRules/Checkbox_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Checkbox_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Checkbox_A__c,Checkbox_B__c)</errorConditionFormula>
    <errorMessage>Make sure both Checkboxes are not checked</errorMessage>
</ValidationRule>