force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dGender__c</columns>
    <columns>dQualification__c</columns>
    <columns>dSpecialization__c</columns>
    <columns>dPhone__c</columns>
    <columns>dEmail__c</columns>
    <columns>dAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>